--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: white;
             font-weight: bold;
         }
 
@@ -18,7 +18,7 @@
             margin: 0 auto;
             background: white;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+/*             box-shadow: 0 0 10px rgba(0,0,0,0.1); */
         }
 
         .header {
