--- a/result1.html
+++ b/result1.html
@@ -355,7 +355,7 @@ h2 {
             <td>3</td>
             <td><span class="grade grade-f">F</span></td>
             <td>0</td>
-            <td>Good</td>
+            <td>fail</td>
             <td><span class="status">Awaiting Approval</span></td>
         </tr>
         <tr>
