--- a/result1.html
+++ b/result1.html
@@ -275,7 +275,7 @@ h2 {
                     <td>2</td>
                     <td><span class="grade grade-a">A</span></td>
                     <td>10</td>
-                    <td>-</td>
+                    <td>Excellent</td>
                     <td><span class="status">Awaiting Approval</span></td>
                 </tr>
                 <tr>
@@ -355,7 +355,7 @@ h2 {
             <td>3</td>
             <td><span class="grade grade-f">F</span></td>
             <td>0</td>
-            <td>fail</td>
+            <td>Fail</td>
             <td><span class="status">Awaiting Approval</span></td>
         </tr>
         <tr>
